--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "15.5.2",
     "papaparse": "^5.5.3",
     "plotly.js": "^3.1.0",
+    "plotly.js-dist-min": "^3.1.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-plotly.js": "^2.6.0"
